# vehicle-auc

./: .air.toml  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  go.mod  go.sum  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  sqlc.yaml
app/: __init__.py  config.py  constants.py  custom_metrics.py  extensions.py  instrumentation.py
app/models/: __init__.py  auction.py  fulfillment.py  misc.py  order.py  user.py  vehicle.py
app/routes/: __init__.py  api.py  auctions.py  auth.py  main.py  orders.py  vehicles.py
app/services/: __init__.py  clearvin.py  s3.py
app/templates/: base.html  contact.html  how_it_works.html  index.html  pricing.html
cmd/server/: main.go
docs/: BACKEND_ONBOARDING.md  FRONTEND_ONBOARDING.md
frontend/: .env.example  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: api-contracts.spec.ts  auctions.spec.ts  auth.spec.ts  dashboard.spec.ts  mybids.spec.ts  vehicle-create.spec.ts  vehicles.spec.ts  watchlist.spec.ts
frontend/src/: App.tsx
internal/bidengine/: engine.go  engine_test.go  errors.go  processor.go  worker.go
internal/config/: config.go
internal/domain/: types.go
internal/handler/: auctions.go  auth.go  bids.go  debug.go  health.go  images.go  notifications.go  sse.go  vehicles.go  vin.go  watchlist.go
internal/metrics/: metrics.go
internal/middleware/: auth.go  logging.go  middleware_test.go  (+2 more)
migrations-go/: 001_initial_schema.down.sql  001_initial_schema.up.sql  002_seed_data.sql
tests/: conftest.py
(+75 files in other folders)
